# test_editor

./: .gitignore  COMMIT_POLICY.md  Cargo.toml  GIT_WORKFLOW.md  README.md  VERSIONNING_POLICY.md
.github/workflows/: build_check.yml  ci.yml  ci_release.yml  convention_check.yml  test.yml
src/: main.rs
src/async_systems/: api_fetch_systems.rs  catalog_fetch_systems.rs  mod.rs
src/bv_gui/: asset_ui.rs  bevy_ressource_ui.rs  gizmo_ui.rs  mod.rs
src/bv_gui/top_bar/: help_drawer.rs  mod.rs  project_drawer.rs  transformer_drawer.rs
src/interactions/: keybinds.rs  mod.rs  spawn_entity.rs
src/resources/: configuration.rs  mod.rs  ui_menu_state.rs  ui_state.rs
src/serialization/: fileless_assets.rs  mod.rs
src/systems/: camera_system.rs  config_file.rs  gizmo_system.rs  mod.rs  mouse_interaction_system.rs  on_exit.rs  scene_system.rs  ui_system.rs
